fix problems and new handler
